FreeST/test/Programs/InvalidTests/SessionTypes/invalidIn/invalidIn.fst

-- It doesn't really matter, it should not throw an error here
main : Int
main = 23


fun : !Int -> Int
fun c = receive c
